- [releng] Switch to https://github.com/eclipse-sirius/sirius-web[Sirius Web 2025.6.1]
- https://github.com/eclipse-syson/syson/issues/1385[#1385] [releng] Switch to SysIDE 0.9.0
- [releng] Switch to Sirius EMF-JSON 2.5.2
- [releng] Switch to Node 22.16.0

=== Bug fixes

- https://github.com/eclipse-syson/syson/issues/893[#893] [explorer] Fix _Expand All_ tool in SysON _Explorer_ view

=== Improvements

=== New features


== v2025.6.0

=== Shapes

- Add support for `ViewUsages` and `ViewDefinitions`

=== Breaking changes

- Some APIs have changed, impacting downstream applications:

* `org.eclipse.syson.tree.explorer.view.services.api.ISysONDefaultExplorerService`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerFragment`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerService`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerServiceDelegate`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter

- https://github.com/eclipse-syson/syson/issues/1350[#1350] [metamodel] _org.eclipse.syson.sysml.textual.SysMLElementSerializer.SysMLElementSerializer_ now requires to be given an implementation of _INameDeresover_ as a constructor parameter.
The constructor with implicit parameters has disappeared and need to be replaced by the constructor with all parameters.

=== Dependency update
